# UA-2023-Fall-Advanced-Programming-project

./: CMakeLists.txt  README.md
src/: main.cpp
src/logic/: AbstractFactory.cpp  AbstractFactory.h  HighScore.cpp  HighScore.h  IntersectionHandler.cpp  IntersectionHandler.h  LogicHandler.cpp  LogicHandler.h  Observer.cpp  Observer.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  Vector2D.cpp  Vector2D.h  World.cpp  World.h
src/logic/Controller/: Controller.cpp  Controller.h  ControllerObserver.cpp  ControllerObserver.h  MovementController.cpp  MovementController.h
src/logic/MoveStrategy/: ChaseMode.cpp  ChaseMode.h  ControlMode.cpp  ControlMode.h  FearMode.cpp  FearMode.h  Mode.cpp  Mode.h  ModeManager.cpp  ModeManager.h  PassiveMode.cpp  PassiveMode.h
src/logic/Subjects/: Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  CollidableEntity.cpp  CollidableEntity.h  EntityModel.cpp  EntityModel.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Intersection.cpp  Intersection.h  Pacman.cpp  Pacman.h  Subject.cpp  Subject.h  Wall.cpp  Wall.h
src/logic/World/: World.cpp  World.h  WorldLoader.cpp  WorldLoader.h  WorldReader.cpp  WorldReader.h  WorldReaderWRD.cpp  WorldReaderWRD.h
src/logic/World/WFC/: Cell.cpp  Cell.h  CellChangeLog.cpp  CellChangeLog.h  CellMemento.cpp  CellMemento.h  Converter.cpp  Converter.h  GridAfterProcessor.cpp  GridAfterProcessor.h  GridGenerator.cpp  GridGenerator.h  Matrix.cpp  Matrix.h  Memento.cpp  Memento.h  TypeRule.cpp  TypeRule.h  TypeRuleManager.cpp  TypeRuleManager.h  WFCGenerator.cpp  WFCGenerator.h  WFCGridGenerator.cpp  WFCGridGenerator.h  WFCReader.cpp  WFCReader.h  WFCWorldGenerator.cpp  WFCWorldGenerator.h
src/view/: Button.cpp  Button.h  Camera.cpp  Camera.h  ConcreteFactory.cpp  ConcreteFactory.h  Game.cpp  Game.h  RenderWindowSingleton.cpp  RenderWindowSingleton.h  Scoreboard.cpp  Scoreboard.h  StartButton.cpp
src/view/EntityView/: CoinView.cpp  CoinView.h  EntityView.cpp  EntityView.h  FruitView.cpp  FruitView.h  GhostView.cpp  GhostView.h  IntersectionView.cpp  IntersectionView.h  PacmanView.cpp  PacmanView.h  WallView.cpp  WallView.h
src/view/States/: GameOverState.cpp  GameOverState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.cpp  State.h  StateManager.cpp  StateManager.h  VictoryState.cpp  VictoryState.h
src/view/UIObjects/: Animation.cpp  Animation.h  Button.cpp  Button.h  ContinueButton.cpp  ContinueButton.h  CutOffAnimation.cpp  CutOffAnimation.h  Image.cpp  Image.h  ImageAnimation.cpp  ImageAnimation.h  ImageButton.cpp  ImageButton.h  MenuButton.cpp  MenuButton.h  PositionAnimation.cpp  PositionAnimation.h  StartButton.cpp  StartButton.h  UIObject.cpp  UIObject.h
working/: scoreboard
working/WFC/: sampleData.WFC  sampleData2.WFC
working/maps/: map1.txt  map2.txt  map_data.txt  opdracht_map.txt  wall_positions.txt  wall_positions2.txt  wall_positions3.txt
